<resources>
    <string name="app_name">Ad Center</string>
    <string name="EMPTY" />
    <string name="AD_REQUESTS_TITLE">Ad requests</string>
    <string name="BOOKMARKS_TITLE">Bookmarks</string>
    <string name="LAST_ADS_TITLE">Last ads</string>
    <string name="MY_ADS_TITLE">My ads</string>
    <string name="SEARCH_TITLE">Search</string>
    <string name="SETTINGS_TITLE">Settings</string>
    <string name="OFFLINE_MESSAGE">You have problem with internet connection. Check your mobile data or Wi-Fi.</string>
    <string name="EMPTY_FIELDS_MESSAGE">Some fields are empty</string>
    <string name="FIELDS_WITH_WHITESPACE_MESSAGE">Some fields contains whitespace</string>
    <string name="INCORRECT_PASSWORD_RANGE_MESSAGE">Login and password length should be in 4..16</string>
    <string name="PASSWORDS_NOT_MATCH_MESSAGE">Passwords not match</string>
    <string name="OFFLINE_TITLE">Connection problem</string>
    <string name="NO_RESULT_MESSAGE">No result found</string>
    <string name="SEARCH_HINT">search…</string>
    <string name="DETAILS_DISCLAIMER">AdCenter isn\'t responsible for the quality \nof the goods</string>
    <string name="DESCRIPTION">Description</string>
    <string name="CONTACTS">Contacts</string>
    <string name="DATE_PREFIX">Created:</string>
    <string name="USERNAME_PREFIX">Username:</string>
    <string name="PHONE_PREFIX">Phone:</string>
    <string name="VIEWS_PREFIX">Views:</string>
    <string name="BACKEND_URL">backend url</string>
    <string name="SAVE">Save</string>
    <string name="LOGIN">Login</string>
    <string name="LOGOUT">Logout</string>
    <string name="SWITCH_THEME">Switch theme</string>
    <string name="DEV_SETTINGS_BUTTON">Dev settings</string>
    <string name="LOGIN_HINT">login</string>
    <string name="PASSWORD_HINT">password</string>
    <string name="SKIP_LOGIN">Skip</string>
    <string name="LOGIN_BUTTON">Login</string>
    <string name="REGISTER_BUTTON">Register</string>
    <string name="REPEAT_PASSWORD_HINT">repeat password</string>
    <string name="DEV_SETTINGS_TITLE">Dev settings</string>
    <string name="NEW_AD_TITLE">New ad</string>
    <string name="TITLE_HINT">title</string>
    <string name="PRICE_HINT">price</string>
    <string name="PLACE_HINT">place</string>
    <string name="DESCRIPTION_HINT">description</string>
    <string name="PHONE_HINT">phone</string>
    <string name="ADD_PHOTO_BUTTON">Add photo</string>
    <string name="ADD_BUTTON">Add</string>
    <string name="NOT_FOUND_TITLE">Not found</string>
    <string name="NOT_FOUND_TEXT">Something went wrong and no data was found</string>
    <string name="NO_RESULT_FOUND_TITLE">No result found</string>
    <string name="NO_RESULT_FOUND_TEXT">Try different keywords or remove search filters</string>
    <string name="EMPTY_TITLE">Empty</string>
    <string name="THIS_LIST_IS_EMPTY_TEXT">This list is empty</string>
    <string name="BOTTOM_SHEET_MENU_TITLE">Menu</string>
    <string name="currency">Currency</string>
    <string name="add_to_bookmark">Add to bookmarks</string>
    <string name="delete_from_bookmarks">Delete from bookmarks</string>
    <string name="show_advert">Show</string>
    <string name="hide_advert">Hide</string>
    <string name="edit_advert">Edit</string>
    <string name="delete_advert">Delete</string>
    <string name="empty_title_message">Title can\'t be empty</string>
    <string name="empty_price_message">Price can\'t be empty</string>
    <string name="empty_location_message">Locations can\'t be empty</string>
    <string name="empty_phone_message">Phone can\'t be empty</string>
    <string name="empty_synopsis_message">Synopsis can\'t be empty</string>
    <string name="title_length_message">Title length should be from 2 to 40</string>
    <string name="location_length_message">Location min length is 2</string>
    <string name="synopsis_length_message">Description min length is 4</string>
    <string name="delete_dialog_title">Delete advert</string>
    <string name="sort_dialog_title">Sort</string>
    <string name="delete_dialog_message">Are you sure that you want to delete this advert?</string>
    <string name="dialog_negative_button">No</string>
    <string name="dialog_positive_button">Yes</string>
    <string name="sort_negative_button">Cancel</string>
    <string name="sort_positive_button">Apply</string>
    <string name="category">Category:</string>
    <string name="sort">Sort:</string>
</resources>
